Alignment correct on Services page. Added react media queries for Prices page.

--- a/src/pages/services/_services.scss
+++ b/src/pages/services/_services.scss
@@ -278,6 +278,7 @@ $border: 0px solid #ffffff;
 		}
 	
 		ul {
+			width: 100%;
 			font-size: 5vw;
 			list-style: none;
 			border: $border;
